<resources>
    <string name="app_name">My Application</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_login">未登录</string>
    <string name="no_login_noti">登陆一下，内容更精彩</string>
    <string name="mine_jifen">我的积分</string>
    <string name="mine_shoucang">我的收藏</string>
    <string name="mine_mes">我的消息</string>
    <string name="setting">设置</string>
    <string name="legon">登陆</string>
    <string name="not_sign">未签到</string>
    <string name="clean_cache">强力清除缓存</string>
    <string name="auto_carousel">首页焦点图自动轮播</string>
    <string name="push_switch">推送开关</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="check_update">检查更新</string>
    <string name="feed_back">意见反馈</string>
    <string name="service_mobel">客服热线 : 010-58760804-811</string>
    <string name="recommend_app">像朋友推荐本应用</string>
    <string name="exit_legon">退出登录</string>
    <string name="jiandan_version">见道1.1.1</string>
    <string name="phone">手机号</string>
    <string name="verfi_code">请输验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="legon_desc">注册即是同意见道的用户协议和隐私政策</string>
    <string name="pass_legon">密码登陆</string>
    <string name="now_regist">立即注册</string>
    <string name="verfi_legon">验证码登陆</string>
    <string name="next">下一步</string>
    <string name="regist">注册</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="complete">完成</string>
    <string name="use_jifen">可用积分</string>
    <string name="my_jifen">我的积分</string>
    <string name="about_jifen">关于积分</string>
    <string name="normal_task">普通任务</string>
    <string name="zhuce_success">注册成功</string>
    <string name="already_complete">已完成</string>
    <string name="notifi_zhuce">成功认证，可获得一次积分</string>
    <string name="day_task">每日任务</string>
    <string name="day_qiandao">每日签到</string>
    <string name="already_qiandao">已签到</string>
    <string name="notifi_legon">每日登陆可获得一次积分</string>
    <string name="read_articl">阅读文章</string>
    <string name="default_percent">0/10</string>
    <string name="notifi_read">每日最多可获得100积分</string>
    <string name="notifi_share">每日最多可获得200积分</string>
    <string name="my_collect">我的收藏</string>
    <string name="edit">编辑</string>
    <string name="all_check">全选</string>
    <string name="delete">删除</string>
</resources>
