<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.setting.SettingActivity">
    <ImageView
        android:id="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="40dp"
        android:src="@drawable/ic_back1"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_height="40dp" />
<TextView
    android:id="@+id/setting_txt"
    android:layout_marginTop="30dp"
    app:layout_constraintTop_toTopOf="parent"
    android:gravity="center"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:textSize="25sp"
    android:textColor="@color/black"
    android:text="@string/setting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <View
        android:id="@+id/setting_view"
        app:layout_constraintTop_toBottomOf="@id/setting_txt"
        android:background="@color/gray_qian1"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="15dp"></View>
    <TextView
        android:id="@+id/clean_cache"
        app:layout_constraintTop_toBottomOf="@id/setting_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/clean_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/clean_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian"
       app:layout_constraintTop_toBottomOf="@id/clean_cache"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>
    <TextView
        android:id="@+id/auto_carousel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clean_view"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/auto_carousel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/clean_cache_check"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/clean_view"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <View
        android:id="@+id/auto_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian"
        app:layout_constraintTop_toBottomOf="@id/auto_carousel"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>
    <TextView
        android:id="@+id/push_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_view"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/push_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/push_check"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/auto_view"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <View
        android:id="@+id/push_view"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian1"
        app:layout_constraintTop_toBottomOf="@id/push_switch"
        android:layout_width="match_parent"
        android:layout_height="15dp"></View>
    <TextView
        android:id="@+id/user_agreement"
        app:layout_constraintTop_toBottomOf="@id/push_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/user_agreement_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian"
        app:layout_constraintTop_toBottomOf="@id/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>

    <!--隐私政策-->
    <TextView
        android:id="@+id/privacy_policy"
        app:layout_constraintTop_toBottomOf="@id/user_agreement_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/privacy_policy_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian"
        app:layout_constraintTop_toBottomOf="@id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>

    <!--检查更新-->
    <TextView
        android:id="@+id/check_update"
        app:layout_constraintTop_toBottomOf="@id/privacy_policy_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/check_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/check_update_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian"
        app:layout_constraintTop_toBottomOf="@id/check_update"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>

    <!--意见反馈-->
    <TextView
        android:id="@+id/feed_back"
        app:layout_constraintTop_toBottomOf="@id/check_update_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/feed_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/check_update_view"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:text="@string/service_mobel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/feed_back_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian"
        app:layout_constraintTop_toBottomOf="@id/feed_back"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>

    <!--像朋友推荐本应用-->
    <TextView
        android:id="@+id/recommend_app"
        app:layout_constraintTop_toBottomOf="@id/feed_back_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/recommend_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/recommend_app_view"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian1"
        app:layout_constraintTop_toBottomOf="@id/recommend_app"
        android:layout_width="match_parent"
        android:layout_height="15dp"></View>
<Button
    android:id="@+id/exit_legon"
    app:layout_constraintTop_toBottomOf="@id/recommend_app_view"
    android:background="@drawable/legon_shape"
    android:textColor="@color/white"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:text="@string/exit_legon"
    android:textSize="22sp"
    android:layout_marginTop="30dp"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="50dp" />
    <TextView
        android:id="@+id/version"
        app:layout_constraintTop_toBottomOf="@id/exit_legon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:text="@string/jiandan_version"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>
