<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ui.legon.RegistActivity">
    <ImageView
        android:id="@+id/close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/ic_update_close"
        android:layout_width="50dp"
        android:layout_height="50dp" />
    <ImageView
        android:id="@+id/img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="120dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_logo_white"
        android:layout_height="120dp" />
    <EditText
        android:id="@+id/reg_et_phone"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:layout_margin="40dp"
        android:hint="@string/phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/reg_et_verfi_code"
        app:layout_constraintTop_toBottomOf="@id/reg_et_phone"
        android:layout_margin="40dp"
        android:hint="@string/verfi_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        app:layout_constraintBottom_toBottomOf="@id/reg_et_verfi_code"
        android:text="@string/getcode"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="40dp"
        android:id="@+id/get_verficode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/reg_next"
        android:background="@drawable/legon_shape"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/next"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/reg_et_verfi_code"
        android:layout_marginTop="50dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <TextView
        android:id="@+id/reg_verfi_legon"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/reg_next"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="@id/reg_next"
        android:text="@string/verfi_legon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/reg_pass_legon"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/reg_next"
        android:layout_margin="20dp"
        app:layout_constraintRight_toRightOf="@id/reg_next"
        android:text="@string/pass_legon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/lin"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/reg_pass_legon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_weight="1"
            android:id="@+id/wechat"
            android:src="@drawable/ic_news_detail_share_wechat"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        <ImageView
            android:layout_weight="1"
            android:id="@+id/qq"
            android:src="@drawable/ic_news_detail_share_qq"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        <ImageView
            android:layout_weight="1"
            android:id="@+id/xinlang"
            android:src="@drawable/ic_news_detail_share_weibo"
            android:layout_width="0dp"
            android:layout_height="50dp" />

    </LinearLayout>
    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="社交账号登陆"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>