<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ui.collect.CollectActivity">
        <ImageView
            android:id="@+id/back"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="40dp"
            android:src="@drawable/ic_back1"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_height="40dp" />

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:text="@string/my_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
android:textSize="18sp"
        android:textColor="@color/gray"
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/fenge"
        android:layout_marginTop="15dp"
        android:background="@color/gray_qian1"
        app:layout_constraintTop_toBottomOf="@id/edit"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/collect_tab"

        app:layout_constraintTop_toBottomOf="@id/fenge"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.google.android.material.tabs.TabLayout>
    <View
        app:layout_constraintTop_toBottomOf="@id/collect_tab"
        android:layout_marginTop="10dp"
        android:background="@color/gray_qian1"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/collect_viewpage"
        app:layout_constraintTop_toBottomOf="@id/collect_tab"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.viewpager.widget.ViewPager>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="55dp">
        <CheckBox
            android:visibility="gone"
            android:id="@+id/all_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/all_check_text"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/all_check"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="20sp"
            android:layout_margin="12dp"
            android:text="@string/all_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="12dp"
            android:textSize="20sp"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>